#17617 wrap fix for last modified detail

--- a/public/src/page/tkt_details/tkt_details.scss
+++ b/public/src/page/tkt_details/tkt_details.scss
@@ -1328,7 +1328,6 @@ ol, ul, li{
 	}
 
 	.last-modified-detail {
-		@extend .author-mail-detail;
 		a{ 
 			font-weight:normal;
 			color: #999;
